# axum-gate

./: .gitignore  .gitlab-ci.yml  .rules  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  PERMISSION_ID_ENHANCEMENTS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  cliff.toml  custom_roles_example.long-type-6969890574265990938.txt  deny.toml  flake.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
crates/axum-gate/: Cargo.toml  structure-double-check.md
crates/axum-gate/doc/: route_handlers.md
crates/axum-gate/src/: accounts.rs  advanced.rs  errors.rs  jwt.rs  lib.rs  route_handlers.rs  secrets.rs  structure-double-check.md
crates/axum-gate/src/application/: error.rs  errors.rs  mod.rs
crates/axum-gate/src/application/accounts/: account_delete.rs  account_insert.rs  mod.rs
crates/axum-gate/src/application/auth/: login.rs  mod.rs
crates/axum-gate/src/application/permissions/: mod.rs
crates/axum-gate/src/domain/: error.rs  errors.rs  mod.rs
crates/axum-gate/src/domain/entities/: account.rs  credentials.rs  group.rs  mod.rs  role.rs
crates/axum-gate/src/domain/services/: mod.rs  (+2 more)
crates/axum-gate/src/gate/: cookie_service.rs
crates/axum-gate/src/infrastructure/: audit.rs  error.rs  errors.rs  mod.rs
crates/axum-gate/src/permissions/: mod.rs  validation.rs
crates/axum-gate/src/ports/: codecs.rs  error.rs  errors.rs  mod.rs
crates/axum-gate/src/services/: account_insert.rs  account_storage.rs  dynamic_permission.rs  mod.rs  secret_storage.rs
crates/axum-gate/src/storage/: memory.rs  mod.rs  sea_orm.rs  surrealdb.rs
crates/axum-gate/tests/: timing_repositories.rs
doc/: route_handlers.md
examples/: access_policy_example.rs  auth_node.rs  permissions_comparison.rs  simple.rs  simple_usage.rs
examples/custom-roles/: Cargo.toml
examples/custom-roles/src/: main.rs
examples/distributed/: .env  Cargo.toml  README.md
examples/distributed/src/: lib.rs
examples/oauth2-github/: .env  Cargo.toml  README.md
examples/oauth2-github/src/: main.rs
examples/permission-registry/: Cargo.toml  README.md
examples/permission-registry/src/: main.rs
examples/permission-validation/: Cargo.toml  README.md
examples/permission-validation/src/: main.rs
examples/prometheus/: Cargo.toml  README.md  prometheus.yml
examples/prometheus/src/: main.rs
examples/rate-limiting/: Cargo.toml  README.md
examples/rate-limiting/src/: main.rs
examples/sea-orm/: Cargo.toml
examples/sea-orm/src/: main.rs
examples/simple-usage/: Cargo.toml
examples/simple-usage/src/: main.rs
examples/surrealdb/: Cargo.toml
examples/surrealdb/src/: main.rs
src/: access_hierarchy.rs  account.rs  accounts.rs  as_permission_name.rs  audit.rs  claims.rs  codecs.rs  comma_separated_value.rs  cookie_template.rs  credentials.rs  error.rs  errors.rs  gate.rs  groups.rs  hashing.rs  jwt.rs  lib.rs  passport.rs  passport_register.rs  permission_mapping.rs  prelude.rs  public-api.rs  role.rs  role_hierarchy.rs  roles.rs  route_handlers.rs  secrets.rs  services.rs  static_token_authorized.rs  storage.rs  utils.rs  validate_permissions.rs  verification_result.rs
src/accounts/: account_delete.rs  account_insert.rs  account_repository.rs  errors.rs  mod.rs
src/application/: mod.rs
src/application/accounts/: account_delete.rs  mod.rs
src/application/auth/: login.rs  mod.rs
src/authn/: errors.rs  login.rs  logout.rs  mod.rs
src/authz/: access_policy.rs  access_scope.rs  authorization_service.rs  errors.rs  mod.rs
src/codecs/: errors.rs  mod.rs
src/codecs/jwt/: mod.rs  validation_result.rs  validation_service.rs
src/credentials/: credentials_verifier.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: group.rs  role.rs
src/domain/services/: authorization.rs
src/domain/services/permissions/: validation.rs
src/domain/traits/: mod.rs
src/domain/values/: access_scope.rs  mod.rs  permission_id.rs  permissions.rs  secrets.rs  static_token_authorized.rs  verification.rs
src/errors/: accounts.rs  authn.rs  authz.rs  codecs.rs  hashing.rs  mod.rs  permissions.rs  repositories.rs  secrets.rs
src/gate/: access_scope.rs  cookie.rs  mod.rs  state.rs
src/gate/bearer/: mod.rs  static_token_authorized.rs
src/gate/cookie/: cookie_service.rs  mod.rs
src/gate/oauth2/: errors.rs  mod.rs
src/hashing/: argon2.rs  errors.rs  hashing_service.rs  mod.rs
src/infrastructure/: errors.rs  mod.rs
src/infrastructure/jwt/: mod.rs  validation_service.rs
src/infrastructure/repositories/: mod.rs  sea_orm.rs
src/infrastructure/repositories/sea_orm/: models.rs
src/infrastructure/web/: mod.rs  route_handlers.rs
src/old/: account.rs
src/passport/: basic_passport.rs  passport_id.rs  standard_passport.rs
src/permissions/: application_validator.rs  as_permission_name.rs  collision_checker.rs  errors.rs  mod.rs  permission_collision.rs  permission_id.rs  validate_permissions.rs  validation_report.rs
src/permissions/mapping/: mapping_repository.rs  mod.rs
src/ports/: mod.rs
src/ports/auth/: mod.rs
src/ports/repositories/: permission_mapping.rs  secret.rs
src/repositories/: errors.rs  memory.rs  mod.rs  sea_orm.rs  surrealdb.rs
src/repositories/sea_orm/models/: account.rs  credentials.rs  permission_mapping.rs
src/roles/: role_hierarchy.rs
src/route_handlers/: login.rs  logout.rs  mod.rs
src/secrets/: errors.rs  mod.rs  secret_repository.rs
src/services/: account_delete.rs  account_insert.rs  account_storage.rs  codecs.rs  credentials_verifier.rs  dynamic_permission.rs  hashing.rs  mod.rs  secret_storage.rs  secret_verifier.rs  secrets.rs
src/storage/: credentials_memory_storage.rs  memory.rs  passport_storage.rs  sea_orm.rs  surrealdb.rs
src/storage/sea_orm/: models.rs
src/storage/sea_orm/models/: account.rs  credentials.rs
tests/: authorization.rs  authorization_security_tests.rs  permission_mappings_surrealdb.rs  security_tests.rs  storage_and_cookie_security_tests.rs  timing_repositories.rs
tests/accounts/: account_delete_service_tests.rs
(+58 files in other folders)
