[workspace]
members = [
    "examples/custom-roles",
    "examples/distributed",
    "examples/permission-registry",
    "examples/permission-validation",
    "examples/rate-limiting",
    "examples/sea-orm",
    "examples/simple-usage",
    "examples/surrealdb",
    "examples/prometheus",
    "examples/oauth2-github",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
oauth2 = { version = "5", features = ["reqwest"] }
prometheus = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roaring = "0.11"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio"] }
sea-query = { version = "0.32.6", default-features = false, features = ["backend-sqlite", "derive", "sea-query-derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
surrealdb = { version = "2", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit", "util", "timeout", "buffer", "load-shed"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }

[package]
name = "axum-gate"
version = "1.0.0-rc.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
authors = ["Lewin Probst <info@emirror.de>"]
description = "Flexible authentication and authorization for Axum with JWT cookies or bearer tokens, optional OAuth2, and role/group/permission RBAC. Suitable for single-node and distributed systems."
homepage = "https://github.com/emirror-de/axum-gate"
repository = "https://github.com/emirror-de/axum-gate"
readme = "README.md"
documentation = "https://docs.rs/axum-gate"
keywords = ["axum", "auth", "jwt", "oauth2", "rbac"]
categories = ["authentication", "web-programming::http-server"]

[features]
# Enables the DevFast Argon2 preset in release builds if explicitly opted-in.
# In debug builds the preset is available automatically via cfg(debug_assertions).
insecure-fast-hash = []
storage-surrealdb = ["surrealdb"]
storage-seaorm = ["sea-orm/uuid"]
audit-logging = []
prometheus = ["audit-logging", "dep:prometheus"]


[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
const-crypto = "0.3"
cookie = { version = "0.18" }
http = "1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
prometheus = { workspace = true, optional = true }
rand = "0.9"
roaring = { workspace = true, features = ["serde"] }
sea-orm = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3"
strum = { workspace = true }
subtle = ">=2.6.1"
surrealdb = { version = "2", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tower = "0.5"
tracing = { version = "0.1", features = ["release_max_level_info"] }
uuid = { version = "1", features = ["serde", "v7"] }
oauth2 = { workspace = true }
reqwest = { workspace = true }


[dev-dependencies]
surrealdb = { workspace = true }
tokio-test = "0.4.4"
uuid = "1"

[profile.dev]
debug = false

[package.metadata.docs.rs]
all-features = true
