[workspace]
members = [
    "examples/custom-roles",
    "examples/distributed",
    "examples/permission-registry",
    "examples/permission-validation",
    "examples/rate-limiting",
    "examples/sea-orm",
    "examples/simple-usage",
    "examples/surrealdb",
    "examples/prometheus",
    "examples/oauth2-github",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
argon2 = { version = "0.5" }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
const-crypto = "0.3"
cookie = { version = "0.18" }
dotenvy = "0.15"
http = "1"
jsonwebtoken = { version = "10" }
oauth2 = { version = "5", features = ["reqwest"] }
prometheus = "0.14"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roaring = "0.11"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio"] }
sea-query = { version = "0.32.6", default-features = false, features = ["backend-sqlite", "derive", "sea-query-derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
strum = { version = "0.27", features = ["derive"] }
subtle = ">=2.6.1"
surrealdb = { version = "2", features = ["kv-mem"] }
thiserror = "2"
tokio = { version = "1", default-features = true }
tower = { version = "0.5", features = ["limit", "util", "timeout", "buffer", "load-shed"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
uuid = { version = "1" }

[package]
name = "axum-gate"
version = "1.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Lewin Probst <info@emirror.de>"]
description = "Flexible authentication and authorization for Axum with JWT cookies or bearer tokens, optional OAuth2, and role/group/permission RBAC. Suitable for single-node and distributed systems."
homepage = "https://github.com/emirror-de/axum-gate"
repository = "https://github.com/emirror-de/axum-gate"
readme = "README.md"
documentation = "https://docs.rs/axum-gate"
keywords = ["axum", "auth", "jwt", "oauth2", "rbac"]
categories = ["authentication", "web-programming::http-server"]

[features]
default = ["jsonwebtoken/rust_crypto"]
insecure-fast-hash = []
storage-surrealdb = ["surrealdb"]
storage-seaorm = ["sea-orm/uuid"]
audit-logging = []
prometheus = ["audit-logging", "dep:prometheus"]
aws_lc_rs = ["jsonwebtoken/aws_lc_rs"]

[dependencies]
argon2 = { workspace = true, features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
const-crypto = { workspace = true }
cookie = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
prometheus = { workspace = true, optional = true }
rand = { workspace = true }
roaring = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
subtle = { workspace = true }
surrealdb = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tower = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_info"] }
uuid = { workspace = true, features = ["serde", "v7"] }
oauth2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
surrealdb = { workspace = true }
tokio-test = "0.4.4"
uuid = "1"

[profile.dev]
debug = false

[package.metadata.docs.rs]
features = ["insecure-fast-hash", "storage-surrealdb", "storage-seaorm", "audit-logging", "prometheus"]
