[package]
name = "custom-roles-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-gate = { path = "../../crates/axum-gate" }
chrono = { version = "0.4" }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
