[package]
name = "custom-roles-example"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
axum = "0.8.3"
axum-gate = { path = "../../" }
chrono = { version = "0.4" }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
