[package]
name = "distributed"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-gate = { path = "../../crates/axum-gate" }
chrono = "0.4.41"
dotenv = "0.15.0"
num_enum = "0.7.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev]
debug = false
