[package]
name = "distributed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth_node"
path = "src/bin/auth_node.rs"

[[bin]]
name = "consumer_node"
path = "src/bin/consumer_node.rs"

[dependencies]
axum = "0.8.3"
axum-gate = { path = "../../crates/axum-gate" }
chrono = "0.4.41"
dotenv = "0.15.0"
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev]
debug = false
