[package]
name = "oauth2-github"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum-gate = { path = "../../" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
oauth2 = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { workspace = true }
[package]
name = "oauth2-github"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum-gate = { path = "../../" }
axum = "0.8"
oauth2 = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
reqwest = { workspace = true }
