[package]
name = "oauth2-github"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
axum-gate = { path = "../../" }
dotenvy = "0.15"
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
