[package]
name = "permission-registry-example"
version = "0.1.0"
edition = "2024"
description = "Example demonstrating the optional permission mapping registry pattern"

[dependencies]
anyhow = { workspace = true }
axum-gate = { path = "../../" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
