[package]
name = "permission-validation-example"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
anyhow = "1.0"
axum-gate = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
