[package]
name = "permission-validation-example"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
anyhow = { workspace = true }
axum-gate = { path = "../../" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
