[package]
name = "prometheus-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-gate = { path = "../../crates/axum-gate", features = ["prometheus"] }
chrono = { version = "0.4" }
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
