[package]
name = "rate-limiting-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-gate = { path = "../../" }
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = [
    "limit",
    "util",
    "timeout",
    "buffer",
    "load-shed",
] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
