[package]
name = "sea-orm-example"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
axum = { workspace = true }
axum-gate = { path = "../../", features = ["storage-seaorm"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
