[package]
name = "surrealdb-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-gate = { path = "../../crates/axum-gate", features = ["storage-surrealdb"] }
chrono = { version = "0.4" }
dotenv = "0.15.0"
surrealdb = { version = "2", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
