[package]
name = "surrealdb-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { workspace = true }
axum-gate = { path = "../../", features = ["storage-surrealdb"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
